# ImobiliariaAPI

./: .env  .env.example  README.md  pyproject.toml
imobiliaria/: obter_token.py  swagger_config.py
imobiliaria/abstracts/: models.py
imobiliaria/apps/anuncios/: models.py  serializers.py  tests.py  urls.py  views.py
imobiliaria/apps/anuncios/migrations/: 0001_initial.py
imobiliaria/apps/imoveis/: models.py  serializers.py  tests.py  urls.py  views.py
imobiliaria/apps/imoveis/migrations/: 0001_initial.py
imobiliaria/apps/reservas/: apps.py  models.py  serializers.py  tests.py  urls.py  views.py
imobiliaria/apps/reservas/migrations/: 0001_initial.py
imobiliaria/fixtures/: anuncios.json  imoveis.json  plataformas.json  reservas.json
imobiliaria/imobiliaria/: settings.py  urls.py
